--- a/UI/UI_WindowForm/UI_WindowForm/UI_WindowForm.csproj
+++ b/UI/UI_WindowForm/UI_WindowForm/UI_WindowForm.csproj
@@ -56,16 +56,26 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="History.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="History.Designer.cs">
+      <DependentUpon>History.cs</DependentUpon>
+    </Compile>
     <Compile Include="IOPage.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="IOPage.Designer.cs">
       <DependentUpon>IOPage.cs</DependentUpon>
     </Compile>
+    <Compile Include="Logger.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="History.resx">
+      <DependentUpon>History.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="IOPage.resx">
       <DependentUpon>IOPage.cs</DependentUpon>
